--- a/Nikita_22111042.md
+++ b/Nikita_22111042.md
@@ -7,6 +7,15 @@ SELECT T.TrainID, T.TrainName, R.*, C.CoachID, C.Manufacturer, C.Milage, C.IsAct
  having Month<6;
 ```
 
+## OUTPUT
+
+<img
+  src="./Nikita/SetA1.png"
+  alt="Alt text"
+  title="Optional title"
+  style="display: inline-block; margin: 0 auto;width: 100%;height:100%;padding:10px">
+<hr>
+
 ### 2.	List all the routes in descending order of seats sold, including route information and distribution of seats sold (Children, Adult, Senior Citizen) in the month of October this year.
 
 ```sql
@@ -17,6 +26,15 @@ SELECT R.RouteID, R.Name,der.* FROM Routes R, Trains T,
  ORDER BY(count) desc) der
  WHERE der.TrainID=T.TrainID AND T.RouteID=R.RouteID;
 ```
+
+## OUTPUT
+
+<img
+  src="./Nikita/SetA2.png"
+  alt="Alt text"
+  title="Optional title"
+  style="display: inline-block; margin: 0 auto;width: 100%;height:100%;padding:10px">
+<hr>
 
 
 ### 3.	List all agents’ information with more than 10 confirmed bookings in the month of September this year.
@@ -30,6 +48,15 @@ HAVING count>10) BK
 WHERE BK.AgentID=A.AgentID;
 ```
 
+## OUTPUT
+
+<img
+  src="./Nikita/SetA3.png"
+  alt="Alt text"
+  title="Optional title"
+  style="display: inline-block; margin: 0 auto;width: 100%;height:100%;padding:10px">
+<hr>
+
 
 ### 4.	Display the details of the route most travelled by Senior Citizens.
 
@@ -40,6 +67,15 @@ INNER JOIN Tickets TK ON TK.TrainID = T.TrainID
 WHERE TK.PassengerType = "Senior Citizen";
 ```
 
+## OUTPUT
+
+<img
+  src="./Nikita/SetA4.png"
+  alt="Alt text"
+  title="Optional title"
+  style="display: inline-block; margin: 0 auto;width: 100%;height:100%;padding:10px">
+<hr>
+
 
 ### 5.	Display the details of the route where a train was always on time.
 
@@ -49,4 +85,13 @@ SELECT R.RouteID, R.Name, R.Start_station, R.End_station, TS.Date
  WHERE R.RouteID = TS.RouteID
  AND TS.EarlyArrivTime = TS.ArrivTime;
 ```
+
+## OUTPUT
+
+<img
+  src="./Nikita/SetA5.png"
+  alt="Alt text"
+  title="Optional title"
+  style="display: inline-block; margin: 0 auto;width: 100%;height:100%;padding:10px">
+<hr>
 
