--- a/Vilas_22111075.md
+++ b/Vilas_22111075.md
@@ -7,6 +7,13 @@ FROM DriverSchedule DS , Driver D
 WHERE DS.DriverID = D.DriverID AND DS.Date = '2023-10-10';
 ```
 
+<img
+  src="./Vilas/SetB1.png"
+  alt="Alt text"
+  title="Optional title"
+  style="display: inline-block; margin: 0 auto;width: 100%;height:100%;padding:10px">
+<hr>
+
 ### 2.	List all coaches with mileage between 4000 and 4999 km covered for September this year; include information on the coach, its last service date and total number of scheduled trips.
 
 ```sql
@@ -17,6 +24,13 @@ select C.* , floor(C.milage/R.Distance) as Trips
  and C.TrainID = T.TrainID
  and T.RouteID = R.RouteID;
 ```
+
+<img
+  src="./Vilas/SetB2.png"
+  alt="Alt text"
+  title="Optional title"
+  style="display: inline-block; margin: 0 auto;width: 100%;height:100%;padding:10px">
+<hr>
 
 
 ### 3.	List all agents, in descending order of percentage of confirmed booking each trip in the month of October this year. Include agent and route information in your result.s year.
@@ -33,6 +47,13 @@ GROUP BY A.AgentID, R.RouteID
 ORDER BY ConfirmedPercentage DESC;
 ```
 
+<img
+  src="./Vilas/SetB3.png"
+  alt="Alt text"
+  title="Optional title"
+  style="display: inline-block; margin: 0 auto;width: 100%;height:100%;padding:10px">
+<hr>
+
 
 ### 4.	Display the details of the routes where majority of bookings are not made by agents.
 
@@ -43,6 +64,13 @@ INNER JOIN Tickets TK ON TK.TrainID = T.TrainID
 WHERE TK.AgentID IS NULL;
 ```
 
+<img
+  src="./Vilas/SetB4.png"
+  alt="Alt text"
+  title="Optional title"
+  style="display: inline-block; margin: 0 auto;width: 100%;height:100%;padding:10px">
+<hr>
+
 
 ### 5.	Display the details of the agents who have made maximum commission in the Month of September.
 
@@ -52,3 +80,10 @@ SELECT AG.AgentID,AG.Name, AG.ContactNO, AG.Address, AG.Email, AG.sum as Max_Sum
    INNER JOIN Agents A ON TK.AgentID = A.AgentID
    WHERE TK.AgentID IS NOT NULL AND month(BookingDate)=9 GROUP BY TK.AgentID ORDER BY sum desc) AG limit 1;
 ```
+
+<img
+  src="./Vilas/SetB5.png"
+  alt="Alt text"
+  title="Optional title"
+  style="display: inline-block; margin: 0 auto;width: 100%;height:100%;padding:10px">
+<hr>
